# modulo_agendamento

./: .gitignore  docker-compose.yml  langgraph.json  main.py  prompt.md  pyproject.toml  settings.json
app/application/agents/: message_agent_builder.py  message_router.py
app/application/agents/node_functions/: api_tools_node.py  book_appintment_node.py  check_availability_node.py  check_completeness_node.py  clarification_node.py  collection_node.py  despedida.py  fallback_node.py  farewell_node.py  final_confirmation_node.py  greeting_node.py  orquestrator_node.py  other_node.py  scheduling_info_node.py  scheduling_node.py  sheduling_info_node.py  update_and_clarify_node.py  validate_and_confirm_node.py  validation_scheduling_data_node.py
app/application/agents/prompts/: analyze_user_intent_prompt.py  classify_confirmation_response_prompt.py  classify_message_prompt.py  extract_scheduling_details_prompt.py  generate_confirmation_prompt.py  generate_correction_request_prompt.py  (+6 more)
app/application/dto/: message_request_dto.py  message_response_dto.py
app/application/interfaces/: illm_service.py
app/application/services/: message_service.py
app/domain/: message_domain.py  sheduling_details.py
app/domain/entities/: medical_professional.py  medical_specialty.py
app/domain/value_objects/: tool_result.py
app/infrastructure/clients/: apphealth_api_client.py  n8n_client.py
app/infrastructure/config/: config.py
app/infrastructure/interfaces/: imedical_repository.py
app/infrastructure/persistence/: ISaveCheckpoint.py  memory_saver_checkpointer.py  mongodb_saver_checkpointer.py
app/infrastructure/repositories/: apphealth_api_medical_repository.py
app/presentation/: message_routers.py
scripts/: clean_collections.py
(+4 files in other folders)
