[project]
name = "modulo-agendamento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "isort>=6.0.1",
    "langchain-core>=0.3.63",
    "langchain-openai==0.3.16",
    "langgraph>=0.4.7",
    "langsmith>=0.3.43",
    "pydantic-settings>=2.9.1",
]
